vlib/v/checker/tests/assign_fn_call_on_left_side_err.out
vlib/v/checker/tests/assign_fn_call_on_left_side_err.v:6:2: error: cannot call function `foo()` on the left side of an assignment
    4 | 
    5 | fn main() {
    6 |     foo('s') = 1
      |     ~~~~~~~~
    7 | }
